// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerImportStep > should render with multiple import 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background mb-4 hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="text-theme-success-100 dark:text-theme-success-900 css-mydt5v"
            height="22"
            width="22"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12.5"
                fill="currentColor"
                r="11"
                stroke="#289548"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M18.4034 8.76465L12.3234 16.9246C12.1634 17.0846 12.0034 17.2447 11.7634 17.2447C11.5234 17.2447 11.2834 17.1646 11.1234 17.0046L9.52344 15.4046"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5.59375 15.4775L7.19375 17.0775C7.35375 17.2375 7.51375 17.3175 7.75375 17.3175C7.83375 17.3175 7.99375 17.3175 8.07375 17.2375"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M14.3912 8.76465L11.0312 13.2446"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Completed
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div>
      <div
        class="mb-3 sm:hidden"
      >
        <div
          class="flex h-9 w-full flex-row items-center justify-between border-l-2 border-l-theme-primary-400 bg-theme-primary-100 px-3 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Addresses
          </span>
        </div>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900"
          data-testid="LedgerMobileItem__wrapper"
        >
          <div
            class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              ARK Devnet #3
            </span>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none !p-0 text-theme-primary-600 dark:text-theme-secondary-500"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="pencil"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <span>
                  Edit
                </span>
              </div>
            </button>
          </div>
          <div
            class="flex w-full flex-col gap-4 px-4 pb-4 pt-2.5"
          >
            <div
              class="flex w-36 flex-col gap-2"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Address
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <div
                    data-testid="Address__address-container"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-900 text-sm font-semibold dark:text-theme-secondary-200 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                    </span>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="copy"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex w-36 flex-col gap-2"
              data-testid="LedgerMobileItem__network"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Value (DARK)
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900"
          data-testid="LedgerMobileItem__wrapper"
        >
          <div
            class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              ARK Devnet #4
            </span>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none !p-0 text-theme-primary-600 dark:text-theme-secondary-500"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="pencil"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <span>
                  Edit
                </span>
              </div>
            </button>
          </div>
          <div
            class="flex w-full flex-col gap-4 px-4 pb-4 pt-2.5"
          >
            <div
              class="flex w-36 flex-col gap-2"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Address
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <div
                    data-testid="Address__address-container"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-900 text-sm font-semibold dark:text-theme-secondary-200 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                    </span>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="copy"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex w-36 flex-col gap-2"
              data-testid="LedgerMobileItem__network"
            >
              <span
                class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Value (DARK)
              </span>
              <div
                class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div>
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    NaN DARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with multiple import 2`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background mb-4 hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="text-theme-success-100 dark:text-theme-success-900 css-mydt5v"
            height="22"
            width="22"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12.5"
                fill="currentColor"
                r="11"
                stroke="#289548"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M18.4034 8.76465L12.3234 16.9246C12.1634 17.0846 12.0034 17.2447 11.7634 17.2447C11.5234 17.2447 11.2834 17.1646 11.1234 17.0046L9.52344 15.4046"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5.59375 15.4775L7.19375 17.0775C7.35375 17.2375 7.51375 17.3175 7.75375 17.3175C7.83375 17.3175 7.99375 17.3175 8.07375 17.2375"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M14.3912 8.76465L11.0312 13.2446"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Completed
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div>
      <div
        class="mb-3 sm:hidden"
      >
        <div
          class="flex h-9 w-full flex-row items-center justify-between border-l-2 border-l-theme-primary-400 bg-theme-primary-100 px-3 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Addresses
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border-transparent pb-2 outline outline-1 outline-transparent md:border-b-[5px] md:border-b-theme-secondary-200 md:outline-theme-secondary-300 dark:md:border-theme-secondary-800 dark:md:outline-theme-secondary-800 md:border-b-0"
        data-testid="TableWrapper"
      >
        <div
          class="with-x-padding css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="w-full table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  no-border first:rounded-tl-xl last:rounded-tr-xl"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Address
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  no-border first:rounded-tl-xl last:rounded-tr-xl"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Edit Name
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="relative css-16ynu5g"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l justify-center"
                  >
                    <div
                      class="flex flex-1 flex-col py-2"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Devnet #3
                          </span>
                        </span>
                        <div
                          data-testid="Address__address-container"
                        >
                          <div
                            class="relative grow text-left"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base absolute w-full"
                              data-testid="Address__address"
                            >
                              DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                            </span>
                            <span>
                               
                            </span>
                          </div>
                          <button
                            class="ring-focus relative focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg
                                id="copy"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                      <div>
                        <span
                          class="whitespace-nowrap text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                          data-testid="Amount"
                        >
                          0 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end font-semibold"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
                      data-testid="LedgerImportStep__edit-alias"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="css-1cn0px"
                          height="14"
                          width="14"
                        >
                          <svg
                            id="pencil"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="relative css-16ynu5g"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l justify-center"
                  >
                    <div
                      class="flex flex-1 flex-col py-2"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Devnet #4
                          </span>
                        </span>
                        <div
                          data-testid="Address__address-container"
                        >
                          <div
                            class="relative grow text-left"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base absolute w-full"
                              data-testid="Address__address"
                            >
                              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                            </span>
                            <span>
                               
                            </span>
                          </div>
                          <button
                            class="ring-focus relative focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg
                                id="copy"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                      <div>
                        <span
                          class="whitespace-nowrap text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                          data-testid="Amount"
                        >
                          0 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end font-semibold"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
                      data-testid="LedgerImportStep__edit-alias"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="css-1cn0px"
                          height="14"
                          width="14"
                        >
                          <svg
                            id="pencil"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with single import (lg) 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background mb-4 hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="text-theme-success-100 dark:text-theme-success-900 css-mydt5v"
            height="22"
            width="22"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12.5"
                fill="currentColor"
                r="11"
                stroke="#289548"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M18.4034 8.76465L12.3234 16.9246C12.1634 17.0846 12.0034 17.2447 11.7634 17.2447C11.5234 17.2447 11.2834 17.1646 11.1234 17.0046L9.52344 15.4046"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5.59375 15.4775L7.19375 17.0775C7.35375 17.2375 7.51375 17.3175 7.75375 17.3175C7.83375 17.3175 7.99375 17.3175 8.07375 17.2375"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M14.3912 8.76465L11.0312 13.2446"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Completed
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger address has been imported.
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex flex-col gap-4"
        data-tesid="DesktopImportSection__wrapper"
      >
        <div
          class="flex flex-col gap-2"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700"
          >
            Imported
          </span>
          <div
            class="flex flex-col gap-4 rounded-xl border border-theme-secondary-300 px-6 py-5 dark:border-theme-secondary-800"
          >
            <div
              class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
              >
                Address
              </span>
              <div
                class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <div
                    data-testid="Address__address-container"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                    </span>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="copy"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="w-full border border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
              >
                Balance
              </span>
              <div
                class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
        data-tesid="DesktopImportSection__wrapper"
      >
        <div
          class="flex flex-col gap-2"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700"
          >
            Address Name
          </span>
          <div
            class="flex flex-col gap-4 rounded-xl border border-theme-secondary-300 px-6 py-5 dark:border-theme-secondary-800"
          >
            <div
              class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
              data-testid="SectionBodyItem__wrapper"
            >
              <span
                class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
              >
                Name
              </span>
              <div
                class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
              >
                <div
                  class="flex w-full flex-row items-center justify-between"
                >
                  <span>
                    ARK Devnet #4
                  </span>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none !p-0 text-theme-primary-600 dark:text-theme-secondary-500"
                    data-testid="LedgerImportStep__edit-alias"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="pencil"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                      <span>
                        Edit
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep > should render with single import (xs) 1`] = `
<div>
  <section
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background mb-4 hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="text-theme-success-100 dark:text-theme-success-900 css-mydt5v"
            height="22"
            width="22"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12.5"
                fill="currentColor"
                r="11"
                stroke="#289548"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M18.4034 8.76465L12.3234 16.9246C12.1634 17.0846 12.0034 17.2447 11.7634 17.2447C11.5234 17.2447 11.2834 17.1646 11.1234 17.0046L9.52344 15.4046"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5.59375 15.4775L7.19375 17.0775C7.35375 17.2375 7.51375 17.3175 7.75375 17.3175C7.83375 17.3175 7.99375 17.3175 8.07375 17.2375"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M14.3912 8.76465L11.0312 13.2446"
                stroke="#289548"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Completed
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger address has been imported.
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-6"
      data-testid="SingleImport__container-mobile"
    >
      <div>
        <div
          class="flex h-9 w-full flex-row items-center justify-between border-l-2 border-l-theme-primary-400 bg-theme-primary-100 px-3 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Imported
          </span>
        </div>
        <div
          class="flex flex-col gap-3 px-3 pt-3"
        >
          <div
            class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
            >
              Address
            </span>
            <div
              class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
            >
              <div
                class="w-32"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-between"
                >
                  <div
                    data-testid="Address__address-container"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                    </span>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="copy"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
            >
              Balance
            </span>
            <div
              class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="flex h-9 w-full flex-row items-center justify-between border-l-2 border-l-theme-primary-400 bg-theme-primary-100 px-3 dark:border-l-theme-primary-300 dark:bg-theme-secondary-800"
          data-testid="SectionHeaderMobile__wrapper"
        >
          <span
            class="text-base font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          >
            Address Name
          </span>
        </div>
        <div
          class="flex flex-col gap-3 px-3 pt-3"
        >
          <div
            class="flex w-full flex-row items-center justify-between text-sm font-semibold sm:justify-start sm:gap-3 sm:text-base"
            data-testid="SectionBodyItem__wrapper"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-500 sm:w-[90px]"
            >
              Name
            </span>
            <div
              class="text-theme-secondary-900 dark:text-theme-secondary-200 sm:w-full"
            >
              <div
                class="flex flex-row items-center gap-2"
              >
                ARK Devnet #4
                <hr
                  class="h-5 w-px border-transparent bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none !p-0 text-theme-primary-600 dark:text-theme-secondary-500"
                  data-testid="LedgerImportStep__edit-alias"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="pencil"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M5.92 18.297L1 19l.703-4.72L14.054 1.828c1.105-1.104 2.913-1.104 4.118 0 1.104 1.105 1.104 2.913 0 4.118L5.92 18.297z"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <span>
                      Edit
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
